# sme-credit-memo-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements 2.txt  run.py  serve.py
api/: main.py  routes.py
data/sample/: sba_7a_sample.csv
evaluation/: findings.md  rubric_guide.md  rubric_scores.csv
examples/: high_score_example.docx  low_score_example.docx
frontend/: index.html
pipeline/: clean.py  credit_analysis.py  format_doc.py  generate.py  ingest.py  prompt.py  validate.py
prompts/: output_schema.json  system_prompt.txt
tests/: test_credit_analysis.py
