[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sme-credit-memo-ai"
version = "0.1.0"
description = "AI-powered SME credit memo generator using the Claude API and SBA 7(a) loan data"
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=pipeline --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
